# npu-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  ir_ramulator2_dram_test_slice.json  requirements.txt  resnet50_2x2_gemini_ir_slice.json  run.sh
.mplconfig/: fontlist-v390.json
assets/: npu_scale_design_optimal_说明.md
configs/: README.md  booksim2_mesh.cfg  c5_multicore_hbm.json  c5_multicore_hbm_sram1024.json  default_config.json  full_config.json  full_config_dram_noc.json  gemini_run_example.json  ramulator2_ddr4.yaml  ramulator2_dram_test.json  ramulator2_lpddr5.yaml
configs/chips/: ascend_910.json  cerebras_wse2.json  eyeriss.json  eyeriss_v2.json  graphcore_ipu.json  groq_tsp.json  maeri.json  (+11 more)
docs/: ZeBu_test_chip_硬件配置推断.md  ZeBu验证流程与论文呈现.md  实验清单与操作指南.md
experiments/: README.md  bottleneck_breakdown.csv  bottleneck_per_core.csv  mb1_p2p_ir.json  mb2_dram_only_ir.json  sim_results_zebu.csv  simple_single_core_config.json  zebu_validation_table.csv
my_trace/: state_trace.csv  workload_summary.csv
scripts/: README_ZEBU_VALIDATION.md  analyze_dram_bottleneck.py  batch_compare_zebu.py  compare_setir_gemini_resnet50_two_core.py  compare_zebu_simulator.py  csv_to_xlsx.py  gemini_run.py  gen_c5_522_figures.py  infer_zebu_hw_config.py  infer_zebu_hw_from_log.py  parse_zebu_trace.py  plot_c4_concurrency.py  plot_c53_hotspot.py  plot_c5_breakdown.py  plot_gantt.py  plot_gantt_mb1.py  plot_npu_performance_timeline.py  plot_soft_hard_flow.py  plot_tapeout_cost_vs_process.py  run_c5_dse.py  run_ramulator2_dram_test.sh  run_setir_and_simulate.py  run_zebu_and_bottleneck_experiments.py  setir_to_gemini_ir.py  slice_ir.py  thesis_fig_png.py
src/: address_allocator.cpp  booksim2_noc.cpp  core.cpp  gemini_parser.cpp  main.cpp  ramulator2_dram.cpp  simulator.cpp  sram.cpp
tests/: test_ir.json
thesis/: .gitignore  .latexmkrc  Makefile  XJTU-thesis.cls  main.tex
(+62 files in other folders)
